<resources>
    <string name="app_name">Farm Infinity</string>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="warning">GPS is not enabled.</string>
    <string name="lbl_rad_btn_farmer">Farmer</string>
    <string name="lbl_rad_btn_officer">Officer</string>
    <string name="hnt_et_username">Phone</string>
    <string name="hnt_et_otp">OTP</string>
    <string name="hnt_username">User-Id</string>
    <string name="hnt_password">Password</string>
    <string name="lbl_signup">Create Account</string>
    <string name="lbl_fpo">FPO</string>
    <string name="lbl_agent">Agent</string>
    <string name="lbl_privacy_policy_link">By Signing In, you agree to the Privacy Policy \nand Terms and conditions.</string>
    <string name="lbl_pp_link">Privacy Policy</string>
    <string name="resend"><u>Resend</u></string>
    <string name="error_message_blank_field">Cannot be blank</string>
    <string name="error_message_invalid_phone_no">Invalid phone number</string>
    <string name="error_message_invalid_email">Invalid email</string>
    <string name="error_message_invalid_input">Invalid input</string>
    <string name="resend_otp">Resend OTP?</string>
    <string name="forgot_pswd">Forgot Password?</string>
    <string name="error_msg_pswd_len">Password should be between 8 to 16 characters</string>
    <string name="error_msg_pswd_match">Password did not match</string>
    <string name="error_msg_session_expired">Session expired. Please login again.</string>
    <string name="error_msg_logged_out">You are logged out</string>
    <string name="error_msg_feature_not_available">Feature not available</string>
    <string name="error_msg_app_update">We need permissions for some feature to work smoothly</string>
    <string name="error_msg_app_restart">Please restart the application</string>
    <string name="msg_enter_otp">Enter OTP Once You Receive It</string>
    <string name="err_msg_login_officer">Please enter username and password</string>
    <string name="err_msg_login_farmer">Invalid Mobile Number/OTP</string>
    <string name="msg_level_one_complete_farmer">Please continue with the rest of the forms by Login In with the phone number provided during sign up/registration.</string>
    <string name="error_msg_loc">Could not get the location. Try again.</string>
    <string name="error_msg_farmer_declaration">Check farmer declaration checkbox</string>
    <string name="error_msg_officer_declaration">Check officer declaration checkbox</string>
    <string name="err_msg_gender">Select Gender</string>
    <string name="err_msg_area_units">Select land Unit</string>
    <string name="err_msg_state">Select State</string>
    <string name="err_msg_pin">Pin number should be 6 digits</string>
    <string name="err_msg_amount">Select Loan Amount</string>
    <string name="err_msg_loan_purpose">Select Loan Purpose</string>
    <string name="err_msg_age">Age should be between 18 to 70 years</string>
    <string name="err_msg_irr_fclty">Check at least one from Irrigation Facility</string>
    <string name="err_msg_farm_equip">Check at least one from Farm Equipments</string>
    <string name="err_msg_livestock">Check at least one from Livestock</string>
    <string name="err_msg_rabi_crp">Check at least one from Rabi Crops</string>
    <string name="err_msg_kharif_crp">Check at least one from Kharif Crops</string>
    <string name="err_msg_summer_crp">Check at least one from Summer Crops</string>
    <string name="err_msg_plantation_crp_area">Plantation area must be less than the total farmland area</string>
    <string name="err_msg_plantation_crp">Check at least one plantation crop</string>
    <string name="err_msg_doc_name_match">Name in document did not match with the applicant name</string>
    <string name="err_msg_masked_image">Failed to get the masked image. Try again</string>
    <string name="err_msg_aadhar_back">Please upload the back side of aadhaar card</string>
    <string name="err_msg_passport_name_match">Passport failed in validation. Name did not match.</string>
    <string name="err_msg_passport_number">Passport failed in validation.</string>
    <string name="err_msg_voter_id_name_match">Voter ID failed in validation. Name did not match</string>
    <string name="err_msg_voter_id_number">Voter ID failed in validation</string>
    <string name="err_msg_dl_name_match">Driving license failed in validation. Name did not match</string>
    <string name="err_msg_dl_number">Driving license failed in validation</string>
    <string name="err_msg_pan_name_match">Pan failed in validation. Name did not match.</string>
    <string name="err_msg_pan_number">Pan failed in validation</string>
    <string name="err_msg_invalid_aadhaar">Invalid aadhar number</string>
    <string name="err_msg_invalid_pan">Invalid pan number</string>
    <string name="err_msg_invalid_dl">Invalid driving license number</string>
    <string name="err_msg_invalid_passport">Invalid passport file number</string>
    <string name="err_msg_invalid_voter_id">Invalid voter id number</string>
    <string name="msg_aadhaar_prompt">Keep your aadhaar with you and press OK to continue.</string>
    <string name="err_msg_doc_varifation">Something went wrong. Could not validate</string>
    <string name="err_msg_ifsc_code">Ifsc code should be of 11 characters</string>
    <string name="err_msg_acc_no">Account No. should be greater than 6 characters</string>
    <string name="err_msg_family_member">Maximum 15 members allowed</string>
    <string name="err_msg_pan_checked">Pan available checkbox is checked. Please select Pan card as proof of identity</string>
    <string name="err_msg_dbt_empty">DBT account number cannot be blank</string>
    <string name="err_msg_select_doc_name">Select a document name</string>
    <string name="err_msg_select_loan_type">Select loan type</string>
    <string name="err_msg_select_tenure">Select tenure</string>
    <string name="err_msg_id_proof_select">Select ID proof document name</string>
    <string name="err_msg_add_proof_select">Select Address proof document name</string>
    <string name="err_msg_land_proof_select">Select land document name</string>
    <string name="err_msg_valid_poi">Please enter a valid Id Proof document number</string>
    <string name="err_msg_valid_poa">Please enter a valid Address Proof document number</string>
    <string name="error_network_timeout">Request time out</string>
    <string name="splash_footer">&#169;2020–2023 farmeasytechnologies</string>
    <string name="login_screen_bottom_text">For new Farmer Producer Organisation(FPO) and Agent registration click on the respective link below</string>
    <string name="gen_cred">Click here to generate farmer login credential\n(Optional)</string>
    <string name="ddl_english">English</string>
    <string name="ddl_hindi">Hindi-हिंदी</string>
    <string name="ddl_assamese">Assamese-অসমীয়া</string>
    <string name="ddl_male">Male</string>
    <string name="ddl_female">Female</string>
    <string name="ddl_unit_Acre">Acre</string>
    <string name="ddl_unit_Bhigha">Bigha</string>
    <string name="lbl_dashboard_add_btn">Add Client</string>
    <string name="lbl_dashboard_add_text">Add farmer details</string>
    <string name="lbl_dashboard_edit_btn">Edit/Search</string>
    <string name="lbl_dashboard_edit_text">Search &amp; Edit farmer information</string>
    <string name="lbl_dashboard_recent_btn">Recent</string>
    <string name="lbl_dashboard_recent_text">Recently added clients</string>
    <string name="lbl_dashboard_setting_btn">Settings &amp; Privacy</string>
    <string name="lbl_dashboard_setting_text">Backup, Restore, Language, Privacy</string>
    <string name="lbl_dashboard_reports_btn">Reports</string>
    <string name="lbl_dashboard_reports_text">Generate reports</string>
    <string name="lbl_choose_language">Choose Language</string>
    <string name="lbl_home">Home</string>
    <string name="lbl_setting">Settings</string>
    <string name="lbl_reset_password">Reset Password</string>
    <string name="lbl_logout">Logout</string>
    <string name="lbl_language">Language</string>
    <string name="lbl_password_management">Password Management</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_memory_management">Memory Management</string>
    <string name="lbl_clear_cache">Clear Cache</string>
    <string name="lbl_share_app">Invite A Friend</string>
    <string name="lbl_about">About</string>
    <string name="lbl_about_text">Farm Infinity (Farmer application management app)</string>
    <string name="lbl_version">Version 1.7.1</string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="lbl_term_con">Terms and Conditions</string>
    <string name="lbl_hint_old_pswd">Old Password</string>
    <string name="lbl__hint_new_pswd">New Password</string>
    <string name="lbl_hint_confirm_pswd">Confirm Password</string>
    <string name="lbl_recently_added">Recently Added</string>
    <string name="lbl_edit_search">Edit/Search</string>
    <string name="lbl_edit_prefrences">Edit Preferences</string>
    <string name="lbl_send_otp">Send OTP</string>
    <string name="lbl_text_and">&amp;</string>
    <string name="lbl_hint_first_name">First</string>
    <string name="lbl_hint_middle_name">Middle</string>
    <string name="lbl_hint_last_name">Last</string>
    <string name="lbl_resend_otp">Resend OTP</string>
    <string name="et_hint_first_name">Enter your first name</string>
    <string name="et_hint_middle_name">Enter your middle name</string>
    <string name="et_hint_last_name">Enter your last name</string>
    <string name="et_hint_dob">Enter dob from date picker</string>
    <string name="et_hint_age">Age</string>
    <string name="et_hint_farner_name">Enter your father name</string>
    <string name="et_hint_phone_no">Enter your phone number</string>
    <string name="et_hint_alt_phone_no">Enter your alternate phone number</string>
    <string name="et_hint_email">Enter your email id</string>
    <string name="et_hint_chem_fert">eg 10.0</string>
    <string name="et_hint_pesticide">eg 10.0</string>
    <string name="et_hint_organic_fert">eg 10.0</string>
    <string name="et_hint_dbt_bank_name">Enter bank name</string>
    <string name="et_hint_dbt_acc_no">Enter acc no.</string>
    <string name="et_hint_member_count">Enter no of family member</string>
    <string name="et_hint_dbt_ifsc">Enter ifsc code</string>
    <string name="et_hint_capture_date">Date</string>
    <string name="et_hint_gps">Coordinates</string>
    <string name="lbl_hint_otp">Enter OTP</string>
    <string name="lbl_hint_reg_Ph_no">Enter your registered Phone No</string>
    <string name="lbl_hint_new_pswd">Enter new password</string>
    <string name="lbl_hint_confirm_new_pswd">Confirm new password</string>
    <string name="lbl_upload_photo">UPLOAD PHOTO</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_open_cam">Open Camera</string>
    <string name="lbl_longitude">Longitude: </string>
    <string name="lbl_latitude">Latitude: </string>
    <string name="lbl_otp_msg">OTP is valid for 10 minutes</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_farmer_search">Get Farmer Details</string>
    <string name="lbl_hint_farmer_search_box">Enter</string>
    <string name="lbl_text_farmer">Farmer</string>
    <string name="lbl_text_officer">Officer</string>
    <string name="content_description_cam">Open Camera</string>
    <string name="content_description_cam_pane">Camera Pane</string>
    <string name="content_description_ddl">Dropdown List</string>
    <string name="content_description_gps">GPS</string>
    <string name="content_description_calendar">Calendar</string>
</resources>