<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true"
    android:padding="20dp"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/iv_cam_activity_login"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/content_description_cam"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_baseline_photo_camera" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="80dp"
                android:gravity="center"
                android:text="Are You?"
                android:textSize="34sp" />

            <!--<ImageView
                android:id="@+id/iv_logo_activity_login"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:scaleType="fitStart"
                android:contentDescription="@string/content_description_logo"
                app:srcCompat="@drawable/ic_agrifin_logo_login" />-->

            <RadioGroup
                android:id="@+id/radioGroup_role_login_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radBtn_client"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:background="@null"
                    android:checked="true"
                    android:text="@string/lbl_rad_btn_farmer"
                    android:textColor="#4D4B4A"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/radBtn_admin"
                    android:layout_width="fill_parent"
                    android:layout_height="48dp"
                    android:background="@null"
                    android:text="@string/lbl_rad_btn_officer"
                    android:textColor="#4D4B4A"
                    android:textSize="24sp" />

            </RadioGroup>

            <EditText
                android:id="@+id/et_username_activity_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:autofillHints="phone"
                android:background="@drawable/rounded_edittext"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                android:drawableStart="@drawable/ic_action_name_white"

                android:ems="10"
                android:hint="@string/hnt_et_username"
                android:inputType="number"
                android:paddingStart="30dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textColorHint="#4D4B4A"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password_activity_login"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:autofillHints="password"
                android:background="@drawable/rounded_edittext"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890()_#$@-"
                android:drawableStart="@drawable/ic_action_password_white"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/hnt_et_otp"
                android:inputType="textPassword"
                android:paddingStart="30dp"
                android:paddingTop="4dp"
                android:paddingEnd="8dp"
                android:paddingBottom="4dp"
                android:textColorHint="#4D4B4A"
                android:textSize="16sp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_login_activity_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="#447DF0"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_cv_btn_txt_activity_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/lbl_send_otp"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_lbl_resend_otp_activity_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/resend_otp"
                android:textColor="#000000"
                android:textSize="12sp"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_btn_signup_activity_login"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="#4D4B4A"
                app:cardCornerRadius="5dp"
                app:cardElevation="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_cv_btn_txt_activity_signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/lbl_signup"
                        android:textColor="#FFFFFF"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/login_screen_bottom_text"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_lbl_fpo_reg_activity_login"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/lbl_fpo"
                        android:textColor="#4D4B4A"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_lbl_and"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_toEndOf="@+id/tv_lbl_fpo_reg_activity_login"
                        android:text="@string/lbl_text_and"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/tv_lbl_agent_reg_activity_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/tv_lbl_and"
                        android:text="@string/lbl_agent"
                        android:textColor="#4D4B4A"
                        android:textSize="16sp" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tv_lbl_forgot_pswd_activity_login"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginBottom="30dp"
                    android:gravity="center"
                    android:text="@string/forgot_pswd"
                    android:textColor="#8A8787"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_lbl_privacy_activity_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="50dp"
                    android:gravity="start"
                    android:lineSpacingExtra="4dp"
                    android:text="@string/lbl_privacy_policy_link"
                    android:textColor="#4D4B4A"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>