<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.ChooseLanguageActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/lbl_choose_language"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="60dp"
        android:layout_weight=".28"
        android:background="@drawable/spinner_border"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinner_language_activity_choose_language"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_ddl"
            android:src="@drawable/ic_drop" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_btn_save_activity_choose_language"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="#FD7D00"
        app:cardCornerRadius="25dp"
        app:cardElevation="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_btn_save_activity_choose_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/lbl_save"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>